syntax = "proto3";

                 package ssoDomain;
service SsoDomainService {
 rpc createSsoDomain (SsoDomainCreateInput) returns (SsoDomain) {}
rpc ssoDomains (findManyParams) returns (stream SsoDomain) {}
rpc ssoDomain (SsoDomainWhereUniqueInput) returns (SsoDomain) {}
rpc updateSsoDomain (SsoDomainUpdateInput) returns (SsoDomain) {}
rpc deleteSsoDomain (SsoDomainWhereUniqueInput) returns (SsoDomain) {} 
 }
message SsoDomainCreateInput {
string createdAt = 1;
string domain = 2;
string id = 3;
string updatedAt = 4;
};
message SsoDomain {
string createdAt = 1;
string domain = 2;
string id = 3;
string updatedAt = 4;
};
message SsoDomainWhereUniqueInput {
string createdAt = 1;
string domain = 2;
string id = 3;
string updatedAt = 4;
};
message SsoDomainUpdateInput {
string createdAt = 1;
string domain = 2;
string id = 3;
string updatedAt = 4;
};
message findManyParams {

};